src/index.css
/* Import Barlow font from Google font */
@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

body {
  background-color: rgb(1, 1, 22);
}
/* Styling for Navbar */
/* #navbar {
  box-shadow: 0 1px 2px white;
} */
.me-auto{
  /* background-color: red; */
  display: flex;
  gap: 56px;
  margin-left: 160px;
}
#navbarScroll {
  font-size: 20px;
  font-family: "Barlow", sans-serif;
}

/* Responsiveness for the Container that comes with the Navbar */
@media only screen and (max-width: 400px) {
  .container-fluid {
    max-width: 100%;
  }
}
/* Styling for the About me section  */
#aboutme {
  position: relative;
}
#aboutme img {
  opacity: 0.2;
  width: auto;
  overflow: hidden;
}
.aboutmeText {
  font-family: "Barlow", sans-serif;
  color: rgb(218, 215, 215);
  padding: 60px;
  position: absolute;
  top: 250px;
}
/* Styling for Hero section  */
#hero {
  display: flex;
  font-family: "Barlow", sans-serif;
  color: rgb(218, 215, 215);
  /* position: relative; */
}
.tagline {
  margin-left: 40px;
  margin-top: 200px;
}
.tagline h1 {
  font-size: 64px;
  font-weight: 600;
}
.underline {
  position: absolute;
  left: 280px;
}
.tagline h4 {
  margin-top: 20px;
}
.heroButton {
  margin: 60px 0px 0px 80px;
}
.curledArrow {
  position: relative;
  top: 88px;
  right: 24px;
}
.heroImages {
  position: relative;
}
.profileImage {
  width: 700px;
  height: 700px;
  /* margin-top: 40px; */
  /* border-radius: 50%; */
  object-fit: cover;
  /* position: relative; */
  
}
.circles {
  position: absolute;
  top: 40px;
  right: -64px;
  z-index: -1;
}

/* .circle {
  width: 600px;
  height: 600px;
  border: 0.5px solid gray;
  border-left: transparent;
  border-radius: 50%;
  position: absolute;
  top: 80px;
  right: -140px;
  z-index: -1;
}
.circle1 {
  width: 500px;
  height: 500px;
  border: solid gray;
  border-left: transparent;
  border-radius: 50%;
  position: absolute;
  top: 128px;
  right: -80px;
  z-index: -1;
}
.circle2 {
  width: 400px;
  height: 400px;
  border: 1px solid gray;
  border-left: transparent;
  border-radius: 50%;
  position: absolute;
  top: 180px;
  right: -36px;
  z-index: -1;
} */

/* Styling for the icons in the hero section */
/* .icons {
  position: relative;
  background-color: red;
} */
.behance {
  position: absolute;
  top: 76px;
  right: 120px;
  z-index: 1000;
  border-radius: 50%;
}
.behance:hover {
  scale: 1.2;
  background-color: azure;
}
.dribble {
  position: absolute;
  top: 166px;
  right: 8px;
  z-index: 1;
  border-radius: 50%;
}
.dribble:hover {
  scale: 1.2;
  background-color: azure;
}
.github {
  position: absolute;
  top: 280px;
  right: -40px;
  z-index: 11;
  border-radius: 50%;
}
.github:hover {
  scale: 1.2;
  background-color: azure;
}
.linkedin {
  position: absolute;
  bottom: 208px;
  right: -12px;
  z-index: 11;
  border-radius: 50%;
}
.linkedin:hover {
  scale: 1.2;
  background-color: azure;
}
/* Styling for Project section  */
#projectsSection {
  font-family: "Barlow", sans-serif;
  font-weight: 400;
  background-color: rgb(9, 9, 20);
  /* background-color: rgb(37, 37, 37); */
}
#projectsSection h2 {
  font-size: 44px;
  padding-top: 44px;
  text-align: center;
  color: beige;
  /* background-color: red; */
}
#projects {
  display: flex;
  justify-content: space-around;
  /* font-size: 4px; */
}
.project1 {
  background-color: rgb(13, 13, 14);
  color: grey;
  margin: 20px;
  padding: 20px;
  border-radius: 12px;
}
/* Styling for Services section  */
.serviceImage {
  opacity: 0.2;
  position: relative;
  width: 100%;
}
#services {
  font-family: "Barlow", sans-serif;
  position: relative;
}
#services h2 {
  font-family: "Barlow", sans-serif;
  font-size: 44px;
  padding-top: 44px;
  text-align: center;
  color: beige;
  position: absolute;
  top: 40px;
  left: 44%;
}
#myServices {
  display: flex;
  gap: 40px;
  /* justify-content: space-around; */
  position: absolute;
  left: 24%;
  top: 280px;
}
.dev {
  background-color: rgb(13, 13, 14);
  color: grey;
  margin: 20px;
  padding: 20px;
  border-radius: 12px;
}
.codeIcon {
  margin: 0px 0px 24px 0px;
  position: relative;
  left: 36%;
}
.design {
  background-color: rgb(13, 13, 14);
  color: grey;
  margin: 20px;
  padding: 20px;
  border-radius: 12px;
}
.designIcon {
  margin: 0px 0px 24px 0px;
  position: relative;
  left: 36%;
}
/* Styling for footer section  */
#footer {
  font-family: "Barlow", sans-serif;
  background-color: rgb(1, 1, 22);
  padding: 40px 0px;
  height: 250px;
}
#footer h3 {
  text-align: center;
  color: beige;
}
.footerIcons {
  margin-top: 60px;
  display: flex;
  justify-content: center;
  gap: 20px;
}
.footerIcon {
  border-radius: 50%;
  transition: transform 0.3s;
}
.footerIcon:hover {
  scale: 1.2;
  background-color: azure;
}

/* Styling for Resume page */
#resume {
  font-family: "Barlow", sans-serif;
  text-align: center;
  color: beige;
}

